--- a/src/synccontroller/package.json
+++ b/src/synccontroller/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "test": "grunt build_test",
     "prepare": "grunt build_lib",
-    "start": "node ./src/main.js -c http://consul:8500 -l development",
-    "debug": "nodemon --legacy-watch --watch ./src --inspect=0.0.0.0:5855 --nolazy ./src/main.js -c http://consul:8500 -l development"
+    "start": "node ./src/main.js -l development",
+    "debug": "nodemon --legacy-watch --watch ./src --inspect=0.0.0.0:5855 --nolazy ./src/main.js -l development"
   },
   "author": {
     "name": "Rajiv Ramdhany",
