--- a/src/synccontroller/Dockerfile
+++ b/src/synccontroller/Dockerfile
@@ -1,16 +1,9 @@
-FROM node:10
-MAINTAINER Rajiv Ramdhany "rajiv.ramdhany@bbc.co.uk"
+FROM node:12.22.12
 
 LABEL version="2.0.0"
 LABEL description="This service provides monitors timeline membership change events in a session and generates a synchronisation \
 timeline for each timeline source-type pair. It dynamically runs a reduction function over the state of similar timelines to \
-synthesise the state for the synchronisation timeline. The asynchrony reduction algorithm supports "
-
-# update npm to v5.3.0
-RUN rm -rf /usr/local/lib/node_modules/npm \
-  && mkdir /usr/local/lib/node_modules/npm \
-  && curl -sL https://github.com/npm/npm/archive/v6.0.0.tar.gz | tar xz -C /usr/local/lib/node_modules/npm --strip-components=1 \
-  && npm --version
+synthesise the state for the synchronisation timeline."
 
 
 # Create service directory
